--- a/spring_ioc_xml/pom.xml
+++ b/spring_ioc_xml/pom.xml
@@ -9,6 +9,11 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <!-- 基于Maven依赖传递性，导入spring-context依赖即可导入当前所需所有jar包 -->
         <dependency>
@@ -23,7 +28,19 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+        <!-- MySQL驱动 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
+        <!-- 数据源 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.31</version>
+        </dependency>
 
+    </dependencies>
 
 </project>
